# sfml-snake

./: CMakeLists.txt
src/: main.cpp
src/core/: FoodComponent.cpp  FoodComponent.h  GameBoard.cpp  GameBoard.h  GameController.cpp  GameController.h  IComponent.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  SnakeComponent.cpp  SnakeComponent.h  Utilities.cpp  Utilities.h  engine.h  food.cpp  food.h  game.cpp  game.h  snake.cpp  snake.h
src/ui/: MainMenu.cpp  MainMenu.h
